--- a/src/views/articulos/index.hbs
+++ b/src/views/articulos/index.hbs
@@ -1,1 +1,69 @@
-{{articulos}}
+<div class="row mt-4">
+    <div class="col">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" id="busqueda" url="http://localhost:3000/articulos/buscar" placeholder="Buscar Articulos" aria-label="Recipient's username"
+                aria-describedby="button-addon2">
+            <div class="input-group-append">
+                <button class="btn btn-outline-success" type="button" id="button-addon2"><i class="fa fa-search"></i></button>
+            </div>
+        </div>
+
+        <div id="Resultados">
+            <table class="table table-striped mt-3">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Precio</th>
+                        <th>Stock</th>
+                        <th>Accion</th>
+                    </tr>
+                </thead>
+        
+                <tbody class="busqueda">
+        
+                </tbody>
+            </table>
+        </div>
+
+       <div class="contenido">
+            <table class="table table-striped">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Precio</th>
+                        <th>Stock</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+           
+                <tbody>
+                    {{#each articulos}}
+                    <tr>
+                        <td>{{Nombre}}</td>
+                        <td>{{Precio}}</td>
+                        <td>{{Stock}}</td>
+                        <td>
+                            <button class="btn btn-warning"><i class="fa fa-edit"></i></button>
+                            <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
+                        </td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+       </div>
+    </div>
+</div>
+
+<div class="row justify-content-center">
+    <div class="col-4">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item" disable="{{disable pagina 1}}" id="Primera"><a class="page-link" href="/articulos/1">Primera</a></li>
+                {{#for 1 ultimaPag 1}}
+                <li class="page-item"><a class="page-link" href="/articulos/{{this}}">{{this}}</a></li>
+                {{/for}}
+                <li class="page-item" disable="{{disable pagina ultimaPag}}" id="ultima"><a class="page-link" href="/articulos/{{ultimaPag}}">Ultima</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
