--- a/src/views/articulos/index.hbs
+++ b/src/views/articulos/index.hbs
@@ -1,11 +1,18 @@
 <div class="row mt-4">
     <div class="col">
         <div class="input-group mb-3">
-            <input type="text" class="form-control" id="busqueda" url="http://localhost:3000/articulos/buscar" placeholder="Buscar Articulos" aria-label="Recipient's username"
+            <input type="text" class="form-control" id="busqueda" url="/articulos/buscar" placeholder="Buscar Articulos" aria-label="Recipient's username"
                 aria-describedby="button-addon2">
             <div class="input-group-append">
                 <button class="btn btn-outline-success" type="button" id="button-addon2"><i class="fa fa-search"></i></button>
             </div>
+        </div>
+
+        <div class="alert alert-success alert-dismissible fade show" id="mensaje" role="alert">
+            <span id="text"></span>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
 
         <div id="Resultados">
@@ -43,8 +50,8 @@
                         <td>{{Precio}}</td>
                         <td>{{Stock}}</td>
                         <td>
-                            <button class="btn btn-warning"><i class="fa fa-edit"></i></button>
-                            <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
+                            <a class="btn btn-warning edit"><i class="fa fa-edit"></i></a>
+                            <a href="/articulos/delete/{{IdArticulos}}" class="btn btn-danger delete"><i class="fa fa-trash"></i></a>
                         </td>
                     </tr>
                     {{/each}}
