--- a/src/views/articulos/index.hbs
+++ b/src/views/articulos/index.hbs
@@ -1,5 +1,46 @@
 <div class="row mt-4">
     <div class="col">
+        <button class="btn btn-outline-primary mb-3" data-toggle="modal" data-target="#formAdd">
+            <i class="fa fa-plus"></i>
+        </button>
+
+        <div class="modal fade" id="formAdd" tabindex="-1" role="dialog" aria-labelledby="formAddLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="formAddLabel">Nuevo Articulo</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <form action="/articulos/create" method="POST">
+                        <div class="modal-body">
+                            <input type="hidden" name="id" id="txtId">
+                            <div class="group-form">
+                                <label for="">Nombre</label>
+                                <input type="text" class="form-control" name="Nombre" id="">
+                            </div>
+        
+                            <div class="group-form">
+                                <label for="">Precio</label>
+                                <input type="number" class="form-control" name="Precio" id="">
+                            </div>
+        
+                            <div class="group-form">
+                                <label for="">Stock</label>
+                                <input type="number" class="form-control" name="Stock" id="">
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary create"><i class="fa fa-save"></i> Guardar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+
         <div class="input-group mb-3">
             <input type="text" class="form-control" id="busqueda" url="/articulos/buscar" placeholder="Buscar Articulos" aria-label="Recipient's username"
                 aria-describedby="button-addon2">
